2012-01-13      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2GCCDeclare.mod:  declare procedures in
	  topological order with constants and types.  This fixes a bug
	  reported by Scott Iverson.

2012-01-12      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/Indexing.mod:  removed import of BITSET from SYSTEM.
	* gm2/gm2-compiler/M2Base.mod:  BITSET is now declared as a pervasive
	  type.
	* gm2/gm2-compiler/M2Error.mod:  removed import of BITSET from SYSTEM.
	* gm2/gm2-compiler/M2Printf.mod:  removed import of BITSET from SYSTEM.
	* gm2/gm2-compiler/M2System.mod:  removed BITSET from being declared.
	* gm2/gm2-libs/SYSTEM.def:  removed BITSET from export list.
	* gm2/gm2-libs-min/SYSTEM.def:  removed BITSET from export list.
	* gm2/gm2-libs-coroutines/SYSTEM.def:  removed BITSET from export list.
	* gm2/gm2-libs/Indexing.mod:  BITSET is now a pervasive type.
	* gm2/gm2-libs/M2RTS.mod:  BITSET is now a pervasive type.
	* gm2/gm2.texi:  added new section on packed records and also BITSET
	  is no longer exported from SYSTEM but is a pervasive type.
	* gm2/ulm-lib-gm2/std/M2RTS.mod:  no longer import BITSET.
        * gm2/ulm-lib-gm2/std/MathLib.mod:  no longer import BITSET.
	* gm2/ulm-lib-gm2/std/Plot.mod:  no longer import BITSET.
	* gm2/ulm-lib-gm2/sys/SYSTEM.def:  no longer export BITSET.
	* gm2/ulm-lib-gm2/sys/SysStat.def:  no longer import BITSET.
	* gm2/ulm-lib-gm2/sys/SysStat.mod:  no longer import BITSET.
	* gm2/ulm-lib-gm2/std/Archive.def:  no longer import BITSET.
	* gm2/ulm-lib-gm2/sys/SysIoctl.def:  no longer import BITSET.
	* gm2/gm2-libs-pim/BitBlockOps.mod:  no longer import BITSET.
	* gm2/gm2-libs-pim/BitBlockOps.mod:  no longer import BITSET.
	* gm2/gm2-libs-pim/BitByteOps.mod:  no longer import BITSET.
	* gm2/gm2-libs-pim/BitWordOps.mod:  no longer import BITSET.
	* gm2/gm2/examples/map/AdvMap.def:  no longer import BITSET.

2011-12-01      Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  added ServerSocket.mod to be compiled and